# confidential-huggingface-runner

./: .gitmodules  README.md
containers/: build.sh
containers/confidential-huggingface-runner/: Dockerfile
containers/confidential-huggingface-runner/confidential-ai-loader/: pyproject.toml  requirements.txt
containers/confidential-huggingface-runner/confidential-ai-loader/confidential_ai_loader/: __init__.py  crypto.py  keybroker.py  loader.py
